[CI] v1.14.1 배포 commit

--- a/demo/index.html
+++ b/demo/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>OCR/SSA WebAssembly Sample</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="./css/demo.css" />
+    <link rel="stylesheet" type="text/css" href="./css/demo.css?ver=v1.14.1" />
 
-    <script type="text/javascript" src="./js/util.js"></script>
-    <script type="text/javascript" src="./lib/lodash.min.js"></script>
-    <script type="module" src="./js/ui_simulator.js" async></script>
+    <script type="text/javascript" src="./js/util.js?ver=v1.14.1"></script>
+    <script type="text/javascript" src="./lib/lodash.min.js?ver=v1.14.1"></script>
+    <script type="module" src="./js/ui_simulator.js?ver=v1.14.1" async></script>
     <script src="https://kit.fontawesome.com/71d7c8cd6e.js" crossorigin="anonymous"></script>
   </head>
 
@@ -500,6 +500,17 @@
           </div>
         </fieldset>
         <fieldset>
+          <legend>WASM 리소스 캐시설정</legend>
+          <div>
+            <label for="force_wasm_reload">WASM 리소스 갱신</label>
+            <input type="checkbox" id="force_wasm_reload" name="force_wasm_reload" />
+          </div>
+          <div>
+            <label for="force_wasm_reload_flag">WASM 리소스 갱신 prefix</label>
+            <input type="text" id="force_wasm_reload_flag" name="force_wasm_reload_flag" />
+          </div>
+        </fieldset>
+        <fieldset>
           <div>
             <button id="save-settings">
               <i class="fa-solid fa-check" style="display: none"></i>
@@ -526,6 +537,6 @@
       <div id="ocr_result" class="custom--section"></div>
     </section>
 
-    <script type="module" src="./demo.js" async></script>
+    <script type="module" src="./demo.js?ver=v1.14.1" async></script>
   </body>
 </html>
