--- a/sdk/ocr.html
+++ b/sdk/ocr.html
@@ -18,9 +18,9 @@
           <span id="top-ui-loading"></span>
           <span id="top-ui-text-msg" class="text-info"></span>
         </div>
-        <span class="top-ui-logo"
-          >useB.<b><span style="color: white">wasmOCR</span></b></span
-        >
+        <span class="top-ui-logo">
+          useB.<b><span style="color: white">wasmOCR</span></b>
+        </span>
       </div>
 
       <div data-useb-ocr="middleUI">
