[CI] v1.15.0 배포 commit

--- a/demo/index.html
+++ b/demo/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>OCR/SSA WebAssembly Sample</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="./css/demo.css?ver=v1.14.1" />
+    <link rel="stylesheet" type="text/css" href="./css/demo.css?ver=v1.15.0" />
 
-    <script type="text/javascript" src="./js/util.js?ver=v1.14.1"></script>
-    <script type="text/javascript" src="./lib/lodash.min.js?ver=v1.14.1"></script>
-    <script type="module" src="./js/ui_simulator.js?ver=v1.14.1" async></script>
+    <script type="text/javascript" src="./js/util.js?ver=v1.15.0"></script>
+    <script type="text/javascript" src="./lib/lodash.min.js?ver=v1.15.0"></script>
+    <script type="module" src="./js/ui_simulator.js?ver=v1.15.0" async></script>
     <script src="https://kit.fontawesome.com/71d7c8cd6e.js" crossorigin="anonymous"></script>
   </head>
 
@@ -239,6 +239,10 @@
           <div id="use-encrypt-all-mode-div">
             <label for="use-encrypt-all-mode">암호화 적용 (all)</label>
             <input type="checkbox" id="use-encrypt-all-mode" name="use-encrypt-all-mode" />
+          </div>
+          <div id="use-encrypt-overall-mode-div">
+            <label for="use-encrypt-overall-mode">암호화 적용 (Overall)</label>
+            <input type="checkbox" id="use-encrypt-overall-mode" name="use-encrypt-overall-mode" />
           </div>
           <!-- // 추후 위에 주석 풀어야함 - START
           <div>
@@ -537,6 +541,6 @@
       <div id="ocr_result" class="custom--section"></div>
     </section>
 
-    <script type="module" src="./demo.js?ver=v1.14.1" async></script>
+    <script type="module" src="./demo.js?ver=v1.15.0" async></script>
   </body>
 </html>
