[CI] v1.16.0 배포 commit

--- a/demo/index.html
+++ b/demo/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>OCR/SSA WebAssembly Sample</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="./css/demo.css?ver=v1.15.1" />
+    <link rel="stylesheet" type="text/css" href="./css/demo.css?ver=v1.16.0" />
 
-    <script type="text/javascript" src="./js/util.js?ver=v1.15.1"></script>
-    <script type="text/javascript" src="./lib/lodash.min.js?ver=v1.15.1"></script>
-    <script type="module" src="./js/ui_simulator.js?ver=v1.15.1" async></script>
+    <script type="text/javascript" src="./js/util.js?ver=v1.16.0"></script>
+    <script type="text/javascript" src="./lib/lodash.min.js?ver=v1.16.0"></script>
+    <script type="module" src="./js/ui_simulator.js?ver=v1.16.0" async></script>
     <script src="https://kit.fontawesome.com/71d7c8cd6e.js" crossorigin="anonymous"></script>
   </head>
 
@@ -269,8 +269,13 @@
             <input type="checkbox" id="use-legacy-format" name="use-legacy-format" />
           </div>
           <div>
-            <label for="use-image-warping">왜곡 보정(Warping)</label>
-            <input type="checkbox" id="use-image-warping" name="use-image-warping" />
+            <label for="use-image-correction">이미지 보정</label>
+
+            <select id="use-image-correction">
+              <option value="">사용 안함</option>
+              <option value="useImageWarping">왜곡(Warping)</option>
+              <option value="useImageCropping">왜곡(Warping)+크롭(Cropping)</option>
+            </select>
           </div>
           <div>
             <label for="use-compress-image">이미지 압축 사용</label>
@@ -541,6 +546,6 @@
       <div id="ocr_result" class="custom--section"></div>
     </section>
 
-    <script type="module" src="./demo.js?ver=v1.15.1" async></script>
+    <script type="module" src="./demo.js?ver=v1.16.0" async></script>
   </body>
 </html>
