--- a/demo/index.html
+++ b/demo/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>OCR/SSA WebAssembly Sample</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="./css/demo.css?ver=v1.16.2" />
+    <link rel="stylesheet" type="text/css" href="./css/demo.css?ver=v1.16.3" />
 
-    <script type="text/javascript" src="./js/util.js?ver=v1.16.2"></script>
-    <script type="text/javascript" src="./lib/lodash.min.js?ver=v1.16.2"></script>
-    <script type="module" src="./js/ui_simulator.js?ver=v1.16.2" async></script>
+    <script type="text/javascript" src="./js/util.js?ver=v1.16.3"></script>
+    <script type="text/javascript" src="./lib/lodash.min.js?ver=v1.16.3"></script>
+    <script type="module" src="./js/ui_simulator.js?ver=v1.16.3" async></script>
     <script src="https://kit.fontawesome.com/71d7c8cd6e.js" crossorigin="anonymous"></script>
   </head>
 
@@ -236,13 +236,13 @@
             <label for="use-encrypt-mode">암호화 적용</label>
             <input type="checkbox" id="use-encrypt-mode" name="use-encrypt-mode" />
           </div>
-          <div id="use-encrypt-all-mode-div">
-            <label for="use-encrypt-all-mode">암호화 적용 (all)</label>
-            <input type="checkbox" id="use-encrypt-all-mode" name="use-encrypt-all-mode" />
-          </div>
           <div id="use-encrypt-overall-mode-div">
             <label for="use-encrypt-overall-mode">암호화 적용 (Overall)</label>
             <input type="checkbox" id="use-encrypt-overall-mode" name="use-encrypt-overall-mode" />
+          </div>
+          <div id="use-encrypt-all-mode-div">
+            <label for="use-encrypt-all-mode">암호화 적용 (all)</label>
+            <input type="checkbox" id="use-encrypt-all-mode" name="use-encrypt-all-mode" />
           </div>
           <!-- // 추후 위에 주석 풀어야함 - START
           <div>
@@ -264,6 +264,24 @@
             />
           </div>
           -->
+          <div id="ocr-result-exclude-keylist-div" style="display: none">
+            <div>
+              <label>OCR 결과에서 제외할 값(선택)</label>
+              <ul id="ocr-result-exclude-keylist-wrapper"></ul>
+            </div>
+            <div>
+              <label>OCR 결과에서 제외할 이미지(선택)</label>
+              <ul id="ocr-image-exclude-keylist-wrapper"></ul>
+            </div>
+            <div>
+              <label>암호화 결과에서 제외할 값(선택)</label>
+              <ul id="encrypt-ocr-result-exclude-keylist-wrapper"></ul>
+            </div>
+            <div>
+              <label>암호화 결과에서 제외할 이미지(선택)</label>
+              <ul id="encrypt-ocr-image-exclude-keylist-wrapper"></ul>
+            </div>
+          </div>
           <div>
             <label for="use-legacy-format">legacy format 지원</label>
             <input type="checkbox" id="use-legacy-format" name="use-legacy-format" />
@@ -546,6 +564,6 @@
       <div id="ocr_result" class="custom--section"></div>
     </section>
 
-    <script type="module" src="./demo.js?ver=v1.16.2" async></script>
+    <script type="module" src="./demo.js?ver=v1.16.3" async></script>
   </body>
 </html>
