--- a/sdk/ocr.html
+++ b/sdk/ocr.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="./css/sdk.css?ver=v1.17.3-hotfix-NH-Invest" />
-    <script type="text/javascript" src="./lib/lodash.min.js?ver=v1.17.3-hotfix-NH-Invest"></script>
-    <script type="text/javascript" src="./lib/compressor.min.js?ver=v1.17.3-hotfix-NH-Invest"></script>
+    <link rel="stylesheet" type="text/css" href="./css/sdk.css?ver=v1.18.0-qa-r1" />
+    <script type="text/javascript" src="./lib/lodash.min.js?ver=v1.18.0-qa-r1"></script>
+    <script type="text/javascript" src="./lib/compressor.min.js?ver=v1.18.0-qa-r1"></script>
   </head>
 
   <body>
@@ -51,6 +51,6 @@
       </div> -->
     </div>
 
-    <script type="module" src="./useb-ocr-wasm-sdk.js?ver=v1.17.3-hotfix-NH-Invest" async></script>
+    <script type="module" src="./useb-ocr-wasm-sdk.js?ver=v1.18.0-qa-r1" async></script>
   </body>
 </html>
