--- a/demo/index.html
+++ b/demo/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>OCR/SSA WebAssembly Sample</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="./css/demo.css?ver=v1.20.0" />
+    <link rel="stylesheet" type="text/css" href="./css/demo.css?ver=v1.19.1-woori-bank" />
 
-    <script type="text/javascript" src="./js/util.js?ver=v1.20.0"></script>
-    <script type="text/javascript" src="./lib/lodash.min.js?ver=v1.20.0"></script>
-    <script type="module" src="./js/ui_simulator.js?ver=v1.20.0" async></script>
+    <script type="text/javascript" src="./js/util.js?ver=v1.19.1-woori-bank"></script>
+    <script type="text/javascript" src="./lib/lodash.min.js?ver=v1.19.1-woori-bank"></script>
+    <script type="module" src="./js/ui_simulator.js?ver=v1.19.1-woori-bank" async></script>
     <script src="https://kit.fontawesome.com/71d7c8cd6e.js" crossorigin="anonymous"></script>
   </head>
 
@@ -534,13 +534,6 @@
           </div>
         </fieldset>
         <fieldset>
-          <legend>OCR Config 설정</legend>
-          <div>
-            <label for="ocr_config">OCR Config</label>
-            <input type="text" id="ocr_config" name="ocr_config" />
-          </div>
-        </fieldset>
-        <fieldset>
           <div>
             <button id="save-settings">
               <i class="fa-solid fa-check" style="display: none"></i>
@@ -567,6 +560,6 @@
       <div id="ocr_result" class="custom--section"></div>
     </section>
 
-    <script type="module" src="./demo.js?ver=v1.20.0" async></script>
+    <script type="module" src="./demo.js?ver=v1.19.1-woori-bank" async></script>
   </body>
 </html>
