--- a/demo/index.html
+++ b/demo/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>OCR/SSA WebAssembly Sample</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="./css/demo.css?ver=v1.24.1" />
+    <link rel="stylesheet" type="text/css" href="./css/demo.css?ver=v1.24.2" />
 
-    <script type="text/javascript" src="./js/util.js?ver=v1.24.1"></script>
-    <script type="text/javascript" src="./lib/lodash.min.js?ver=v1.24.1"></script>
-    <script type="module" src="./js/ui_simulator.js?ver=v1.24.1" async></script>
+    <script type="text/javascript" src="./js/util.js?ver=v1.24.2"></script>
+    <script type="text/javascript" src="./lib/lodash.min.js?ver=v1.24.2"></script>
+    <script type="module" src="./js/ui_simulator.js?ver=v1.24.2" async></script>
     <script src="https://kit.fontawesome.com/71d7c8cd6e.js" crossorigin="anonymous"></script>
   </head>
 
@@ -233,10 +233,8 @@
                 <div id="ocr-server-base-url-ui" style="display: none">
                   <label for="ocr-server-base-url">ServerOCR BaseURL</label>
                   <input type="text" id="ocr-server-base-url" name="ocr-server-base-url" /><br />
-                  <label for="ocr-server-url-idcard">└ 주민등록증:</label>
-                  <input type="text" id="ocr-server-url-idcard" name="ocr-server-url-idcard" /><br />
-                  <label for="ocr-server-url-driver">└ 운전면허증:</label>
-                  <input type="text" id="ocr-server-url-driver" name="ocr-server-url-driver" /><br />
+                  <label for="ocr-server-url-idcard-driver">└ 주민등록증/운전면허증:</label>
+                  <input type="text" id="ocr-server-url-idcard-driver" name="ocr-server-url-idcard-driver" /><br />
                   <label for="ocr-server-url-passport">└ 국내여권:</label>
                   <input type="text" id="ocr-server-url-passport" name="ocr-server-url-passport" /><br />
                   <label for="ocr-server-url-foreign-passport">└ 해외여권:</label>
@@ -602,6 +600,6 @@
       <div id="ocr_result" class="custom--section"></div>
     </section>
 
-    <script type="module" src="./demo.js?ver=v1.24.1" async></script>
+    <script type="module" src="./demo.js?ver=v1.24.2" async></script>
   </body>
 </html>
