--- a/demo/index.html
+++ b/demo/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>OCR/SSA WebAssembly Sample</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="./css/demo.css?ver=v1.32.2" />
+    <link rel="stylesheet" type="text/css" href="./css/demo.css?ver=v1.33.0" />
 
-    <script type="text/javascript" src="./js/util.js?ver=v1.32.2"></script>
-    <script type="text/javascript" src="./lib/lodash.min.js?ver=v1.32.2"></script>
-    <script type="module" src="./js/ui_simulator.js?ver=v1.32.2" async></script>
+    <script type="text/javascript" src="./js/util.js?ver=v1.33.0"></script>
+    <script type="text/javascript" src="./lib/lodash.min.js?ver=v1.33.0"></script>
+    <script type="module" src="./js/ui_simulator.js?ver=v1.33.0" async></script>
     <script src="https://kit.fontawesome.com/71d7c8cd6e.js" crossorigin="anonymous"></script>
   </head>
 
@@ -252,6 +252,14 @@
               <div id="server-ocr-result-key-list-ui" style="display: none">
                 <label for="server-ocr-result-key-list">ServerOCR 결과 확장 Key목록</label>
                 <input type="text" id="server-ocr-result-key-list" name="server-ocr-result-key-list" />
+              </div>
+              <div>
+                <label for="skip-server-mode-request-ocr">OCR서버 요청 skip여부</label>
+                <input type="checkbox" id="skip-server-mode-request-ocr" name="skip-server-mode-request-ocr" />
+              </div>
+              <div>
+                <label for="use-fake-image">원본이미지 Fake 처리 여부</label>
+                <input type="checkbox" id="use-fake-image" name="use-fake-image" />
               </div>
             </fieldset>
             <fieldset>
@@ -607,6 +615,6 @@
       <div id="ocr_result" class="custom--section"></div>
     </section>
 
-    <script type="module" src="./demo.js?ver=v1.32.2" async></script>
+    <script type="module" src="./demo.js?ver=v1.33.0" async></script>
   </body>
 </html>
