--- a/demo/index.html
+++ b/demo/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>OCR/SSA WebAssembly Sample</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="./css/demo.css?ver=v1.33.0" />
+    <link rel="stylesheet" type="text/css" href="./css/demo.css?ver=v1.34.0" />
 
-    <script type="text/javascript" src="./js/util.js?ver=v1.33.0"></script>
-    <script type="text/javascript" src="./lib/lodash.min.js?ver=v1.33.0"></script>
-    <script type="module" src="./js/ui_simulator.js?ver=v1.33.0" async></script>
+    <script type="text/javascript" src="./js/util.js?ver=v1.34.0"></script>
+    <script type="text/javascript" src="./lib/lodash.min.js?ver=v1.34.0"></script>
+    <script type="module" src="./js/ui_simulator.js?ver=v1.34.0" async></script>
     <script src="https://kit.fontawesome.com/71d7c8cd6e.js" crossorigin="anonymous"></script>
   </head>
 
@@ -245,6 +245,8 @@
                   /><br />
                   <label for="ocr-server-url-alien">└ 외국인등록증:</label>
                   <input type="text" id="ocr-server-url-alien" name="ocr-server-url-alien" /><br />
+                  <label for="ocr-server-url-alien-back">└ 외국인등록증 뒷면:</label>
+                  <input type="text" id="ocr-server-url-alien-back" name="ocr-server-url-alien-back" /><br />
                   <label for="ocr-server-url-veteran">└ 국가보훈증:</label>
                   <input type="text" id="ocr-server-url-veteran" name="ocr-server-url-veteran" /><br />
                 </div>
@@ -615,6 +617,6 @@
       <div id="ocr_result" class="custom--section"></div>
     </section>
 
-    <script type="module" src="./demo.js?ver=v1.33.0" async></script>
+    <script type="module" src="./demo.js?ver=v1.34.0" async></script>
   </body>
 </html>
